--- a/doxygensettingswidget.ui
+++ b/doxygensettingswidget.ui
@@ -23,10 +23,19 @@
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="sizeConstraint">
+     <enum>QLayout::SetNoConstraint</enum>
+    </property>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QGroupBox" name="groupBox_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="title">
          <string>Doxygen Command</string>
         </property>
@@ -48,7 +57,17 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="Utils::PathChooser" name="pathChooser" native="true"/>
+           <widget class="Utils::PathChooser" name="pathChooser_doxygen" native="true"/>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>DoxyWizard comand:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="Utils::PathChooser" name="pathChooser_wizard" native="true"/>
           </item>
          </layout>
         </widget>
@@ -56,6 +75,12 @@
       </item>
       <item>
        <widget class="QGroupBox" name="groupBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="title">
          <string>Comments Settings</string>
         </property>
