--- a/doxygensettingswidget.ui
+++ b/doxygensettingswidget.ui
@@ -24,7 +24,7 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="sizeConstraint">
-     <enum>QLayout::SetNoConstraint</enum>
+     <enum>QLayout::SetDefaultConstraint</enum>
     </property>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -42,31 +42,44 @@
         <widget class="QWidget" name="formLayoutWidget_2">
          <property name="geometry">
           <rect>
-           <x>19</x>
-           <y>40</y>
+           <x>20</x>
+           <y>30</y>
            <width>411</width>
            <height>111</height>
           </rect>
          </property>
          <layout class="QFormLayout" name="formLayout_2">
-          <item row="0" column="0">
+          <property name="fieldGrowthPolicy">
+           <enum>QFormLayout::ExpandingFieldsGrow</enum>
+          </property>
+          <item row="7" column="0">
+           <widget class="Utils::PathChooser" name="pathChooser_doxygen" native="true">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0">
            <widget class="QLabel" name="label_4">
             <property name="text">
              <string>Doxygen command:</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="Utils::PathChooser" name="pathChooser_doxygen" native="true"/>
-          </item>
-          <item row="1" column="0">
+          <item row="8" column="0">
            <widget class="QLabel" name="label_6">
             <property name="text">
              <string>DoxyWizard comand:</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="9" column="0">
            <widget class="Utils::PathChooser" name="pathChooser_wizard" native="true"/>
           </item>
          </layout>
