Fixed a few UI bugs. Removed options to comment QML files.
git-svn-id: http://svn.kofee.org/svn/qtcreator-doxygen/trunk@62 f221099e-de4c-4a84-8273-7020187b08de

--- a/doxygensettingswidget.ui
+++ b/doxygensettingswidget.ui
@@ -177,17 +177,7 @@
           </item>
           <item>
            <property name="text">
-            <string>QML files (work in progress)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Qt/C++ files only</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>All QML and Qt/C++ files (work in progress for QML files)</string>
+            <string>All</string>
            </property>
           </item>
          </widget>
