--- a/doxygensettingswidget.ui
+++ b/doxygensettingswidget.ui
@@ -224,43 +224,57 @@
           </property>
          </widget>
         </item>
-        <item row="8" column="0">
+        <item row="9" column="0">
          <widget class="QLabel" name="label_filecomment">
           <property name="text">
            <string>Comment files</string>
           </property>
          </widget>
         </item>
-        <item row="8" column="1">
+        <item row="9" column="1">
          <widget class="QCheckBox" name="fileComments">
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
-        <item row="9" column="0">
+        <item row="10" column="0">
          <widget class="QLabel" name="label_filecommentHeaders">
           <property name="text">
            <string>Comment headers</string>
           </property>
          </widget>
         </item>
-        <item row="9" column="1">
+        <item row="10" column="1">
          <widget class="QCheckBox" name="commentHeaderFiles">
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
-        <item row="10" column="0">
+        <item row="11" column="0">
          <widget class="QLabel" name="label_filecommentImpl">
           <property name="text">
            <string>Comment implementation</string>
           </property>
          </widget>
         </item>
-        <item row="10" column="1">
+        <item row="11" column="1">
          <widget class="QCheckBox" name="commentImplementationFiles">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0">
+         <widget class="QLabel" name="label_addreturntype">
+          <property name="text">
+           <string>Automatically add return type: </string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="1">
+         <widget class="QCheckBox" name="autoAddReturnTypes">
           <property name="text">
            <string/>
           </property>
