change "document current project" menu selection from list widget to a tree widget
This change permit to select which group of folder the user want to
document, instead of using a list of file to check every file we need or
not.

--- a/doxygenfilesdialog.ui
+++ b/doxygenfilesdialog.ui
@@ -21,10 +21,15 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QListWidget" name="listWidget">
-     <property name="sortingEnabled">
+    <widget class="QTreeWidget" name="treeWidget">
+     <property name="headerHidden">
       <bool>true</bool>
      </property>
+     <column>
+      <property name="text">
+       <string/>
+      </property>
+     </column>
     </widget>
    </item>
    <item>
